--- a/turbo.json
+++ b/turbo.json
@@ -5,7 +5,11 @@
         "build": {
             "dependsOn": ["^build"],
             "inputs": ["$TURBO_DEFAULT$", ".env*"],
-            "outputs": ["dist/**"],
+            "outputs": [
+                "dist/**",
+                ".next/**",
+                "build/**"
+            ],
             "env": [
                 "DATABASE_URL",
                 "POSTGRES_URI",
